# map-reduce

./: .gitignore  README.md
golang/: README.md  go.mod
golang/apps/: wordcount.go
golang/src/: main.go
rust/: Cargo.toml  README.md  build.rs  mapreduce_result_20241126_031331.txt
rust/examples/: custom_functions.rs
rust/files/: test1.txt
rust/proto/: mapreduce.proto
rust/src/: client.rs  config.rs  coordinator.rs  lib.rs  main.rs  server.rs
rust/src/functions/: mod.rs
rust/src/utils/: mod.rs
rust/tests/: integration_test.rs
