[package]
name = "distributed-mapreduce"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and async runtime
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking and async
tower = "0.4"

# System info
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_matches = "1.5"

[build-dependencies]
tonic-build = "0.9"
